--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/aniruddh-upadhyay-0170a51b2/"><img src="images/LinkedIn.png" alt="LinkedIn" height="32px" width="32px"></a>
       <a class="footer-link" href="https://twitter.com/Aniruddh_482"><img src="images/Twitter.png" alt="Twitter" height="32px" width="32px"></a>
-      <a class="footer-link" href="https://github.com/Aniruddh-482"><img src="images/Github.png" alt="Github"></a>
+      <a class="footer-link" href="https://github.com/Aniruddh-482"><img src="images/GitHub.png" alt="Github"></a>
       <p class="copyright">© Aniruddh Upadhyay 2021.</p>
     </div>
 
