--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
     <div class="middle-container">
       <div class="profile">
         <img src="images/aniruddh.png" alt="aniruddh profile picture" height="200px" width="200px">
-        <h2><span><img class="" src="images/Hi.gif" alt="Hi-gif" height="25px" width="25px"></span>Hello.</h2>
+        <h2><span><img class="hi_gif" src="images/Hi.gif" alt="Hi-gif"></span>Hello.</h2>
         <p class="intro">I am a Second Year Engineering Student at Shri Vaishnav Vidyapeeth Vishwavidyalaya. Currently I am learning Python, Java, and Web Devlopment.</p>
       </div>
       <hr>
       <div class="skills">
-        <h2><span><img class="" src="images/idea.gif" alt="idea-gif" height="40px" width="40px"></span>My Skills.</h2>
+        <h2><span><img class="idea_gif" src="images/idea.gif" alt="idea-gif" height="3%" width="3%"></span>My Skills.</h2>
         <div class="skill-row">
           <img class="code-img" src="images/laptop.png" alt="Laptop-img">
 
-          <h3><span><img class="" src="images/code.gif" alt="laptop-code-gif" height="30px" width="30px"></span>Design & Development</h3>
+          <h3><span><img class="skill_gifs" src="images/code.gif" alt="laptop-code-gif"></span>Design & Development</h3>
           <p>I am a beginner/intermediate level C, C++ Programmer and currently I am learning Python, Java, and Web Devlopment</p>
 
         </div>
         <div class="skill-row">
           <img class="plant-img" src="images/gardening.png" alt="gardening-img">
 
-          <h3><span><img class="" src="images/plant.png" alt="plant-img" height="30px" width="30px">Garden Management</h3>
+          <h3><span><img class="skill_gifs" src="images/plant.png" alt="plant-img">Garden Management</h3>
           <p>“Look deep into nature, and then you will understand everything better.” -Albert Einstein</p>
 
         </div>
       </div>
       <hr>
       <div class="contact-me">
-        <img class="" src="images/Handshake.gif" alt="Handshake-gif" height="40px" width="60px">
+        <img class="handshake_gif" src="images/Handshake.gif" alt="Handshake-gif">
         <h2>Get In Touch</h2>
         <h3>If you love to travel as much as I do.</h3>
         <p class="contact-message">Love Travelling and hove an awsome plan, Let's Go!! We can code while we travel!</p>
